Script and Edmx Updation

--- a/DemoCVReader/DemoCVReader/DemoCVReader.csproj
+++ b/DemoCVReader/DemoCVReader/DemoCVReader.csproj
@@ -319,6 +319,7 @@
       <DependentUpon>SoftProEntities.edmx</DependentUpon>
       <LastGenOutput>SoftProEntities.cs</LastGenOutput>
     </Content>
+    <Content Include="SqlScripts\SoftProject.sql" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Index.cshtml" />
@@ -404,6 +405,9 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>SqlScripts\SoftProject.sql</ApplicationManifest>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
