Commit Final PDF Shownon UPload PAge + Informations Saved

--- a/DemoCVReader/DemoCVReader/DemoCVReader.csproj
+++ b/DemoCVReader/DemoCVReader/DemoCVReader.csproj
@@ -389,6 +389,7 @@
     <Content Include="Views\Category\Index.cshtml" />
     <Content Include="Views\Category\AddNewSkills.cshtml" />
     <Content Include="Views\Category\AddCategory.cshtml" />
+    <Content Include="TempPdf\MyFile.pdf" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
